--- a/app/views/organizer/profiles/show.html.erb
+++ b/app/views/organizer/profiles/show.html.erb
@@ -61,7 +61,8 @@
                         text-align: center;
                         left: 0;
                         right: 0;
-                        font-size: 22px;">
+                        font-size: 22px;
+                        z-index: 1000;">
                     PAST EVENT
                   </div>
                   <div class="cover" style="background-image: url('<%= event.get_thumbnail %>'); filter: brightness(.5);">
