--- a/app/views/organizer/parts/_event_form.html.erb
+++ b/app/views/organizer/parts/_event_form.html.erb
@@ -144,61 +144,114 @@
               <a class="btn btn-sm btn-default btn-ticket-add" href="javasctipt:;" onclick="return onTicketAdd(this);"><i class="fa fa-plus"></i></a>
             <% end %>
 
-            <div class="form-body">
-              <!-- <div class="table-responsive"> -->
-                <table class="table table-hover ticket-list">
-                  <thead>
-                    <tr>
-                      <td>Ticket Title</td>
-                      <td>Ticket Available</td>
-                      <td>Ticket Price (ราคาเต็ม)</td>
-                      <td>Ticket Price (ราคาลด)</td>
-                      <!-- <td>Ticket Unit</td> -->
-                      <td>From</td>
-                      <td>To</td>
-                      <td><!-- Action --></td>
-                    </tr>
-                  </thead>
-                  <tbody
-                    <% @sections.each do |section| %>
-                      <tr class="tickets" id="ticket-<%= section.id %>" data-ticket-id="<%= section.id %>">
-                        <td><input class="form-control" required="" type="text" name="tickets[<%= section.id %>][title]" value="<%= section.title %>" placeholder="eg. General, VIP" /></td>
-                        <td><input class="form-control" required="" type="number" name="tickets[<%= section.id %>][total]" value="<%= section.total %>" /></td>
-                        <td><input class="form-control" type="number" name="tickets[<%= section.id %>][initial_price]" value="<%= section.initial_price %>" /></td>
-                        <td><input class="form-control" required="" type="number" name="tickets[<%= section.id %>][price]" value="<%= section.price %>" /></td>
-                        <!-- <td><input class="form-control" type="number" name="tickets[<%= section.id %>][unit]" value="<%= section.unit %>" /></td> -->
+            <% @sections.each do |section| %>
+              <div class="row">
+                <div class="col-xs-3 form-group">
+                  <label for="tickets-name">Ticket name</label>
+                  <input type="text"
+                         name="tickets[<%= section.id %>][title]"
+                         id="tickets-name"
+                         value="<%= section.title %>"
+                         placeholder="eg. General, VIP"
+                         class="form-control"
+                         required="true" />
+                </div>
+                <div class="col-xs-3 form-group">
+                  <label for="tickets-quantity">Quantity available</label>
+                  <input type="number"
+                         name="tickets[<%= section.id %>][total]"
+                         id="tickets-quantity"
+                         value="<%= section.total %>"
+                         placeholder="eg. 10, 50, 100"
+                         class="form-control"
+                         required="true" />
+                </div>
+                <div class="col-xs-3 form-group">
+                  <label for="tickets-price">Price</label>
+                  <input type="number"
+                         name="tickets[<%= section.id %>][price]"
+                         id="tickets-price"
+                         value="<%= section.price %>"
+                         placeholder="eg. 1000, 2000"
+                         class="form-control"
+                         required="true" />
+                </div>
+                <div class="col-xs-3 form-group">
+                  <label for="tickets-discount">Discount</label>
+                  <input type="number"
+                         name="tickets[<%= section.id %>][initial_price]"
+                         id="tickets-discount"
+                         value="<%= section.initial_price %>"
+                         placeholder="eg. 100, 200"
+                         class="form-control" />
+                </div>
+              </div>
 
-                        <td width="200">
-                          <div class="form-group">
-                            <div class='input-group date datepicker'>
-                              <input class="form-control" type="text" name="tickets[<%= section.id %>][event_time]" value="<%= section.event_time.try(:strftime, '%d/%m/%y %H:%M') %>" />
-                              <span class="input-group-addon">
-                                <span class="glyphicon glyphicon-calendar"></span>
-                              </span>
-                            </div>
-                          </div>
-                        </td>
-                        <td width="200">
-                          <div class="form-group">
-                            <div class='input-group date datepicker'>
-                              <input class="form-control" type="text" name="tickets[<%= section.id %>][end_time]" value="<%= section.end_time.try(:strftime, '%d/%m/%y %H:%M') %>" />
-                              <span class="input-group-addon">
-                                <span class="glyphicon glyphicon-calendar"></span>
-                              </span>
-                            </div>
-                          </div>
-                        </td>
+              <div class="row">
+                <div class="col-xs-6">
+                  <label for="tickets-sales-start">Ticket sales start</label>
+                  <div class="row">
+                    <div class="col-xs-8 form-group">
+                      <div class='input-group date'>
+                        <input type="text"
+                              name="tickets[<%= section.id %>][start_date]"
+                              value="<%= section.event_time.try(:strftime, '%d/%m/%y') %>"
+                              class="form-control datepicker" />
+                        <span class="input-group-addon">
+                          <span class="fa fa-calendar"></span>
+                        </span>
+                      </div>
+                    </div>
+                    <div class="col-xs-4 form-group">
+                      <div  class="input-group date">
+                        <input type="text"
+                              name="tickets[<%= section.id %>][start_time]"
+                              value="<%= section.event_time.try(:strftime, '%H:%M') %>"
+                              class="form-control timepicker" />
+                        <span class="input-group-addon">
+                          <span class="fa fa-clock-o"></span>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-xs-6">
+                  <label for="tickets-sales-start">Ticket sales end</label>
+                  <div class="row">
+                    <div class="col-xs-8 form-group">
+                      <div class='input-group date'>
+                        <input type="text"
+                              name="tickets[<%= section.id %>][end_time]"
+                              value="<%= section.end_time.try(:strftime, '%d/%m/%y') %>"
+                              class="form-control datepicker" />
+                        <span class="input-group-addon">
+                          <span class="fa fa-calendar"></span>
+                        </span>
+                      </div>
+                    </div>
+                    <div class="col-xs-4 form-group">
+                      <div  class="input-group date">
+                        <input type="text"
+                              name="tickets[<%= section.id %>][end_time]"
+                              value="<%= section.end_time.try(:strftime, '%H:%M') %>"
+                              class="form-control timepicker" />
+                        <span class="input-group-addon">
+                          <span class="fa fa-clock-o"></span>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <hr>
+            <% end if @sections.present? %>
+            <div class="new-ticket"></div>
 
-                        <td width="100" align="right">
-                          <a class="btn btn-sm btn-default btn-ticket-delete" href="javasctipt:;" onclick="return onTicketDelete(this);"><i class="fa fa-minus"></i></a>
-                          <a class="btn btn-sm btn-default btn-ticket-add" href="javasctipt:;" onclick="return onTicketAdd(this);"><i class="fa fa-plus"></i></a>
-                        </td>
-                      </tr>
-                    <% end if @sections.present? %>
-                  </tbody>
-                </table>
-              <!-- </div> -->
-            </div>
+              <div class="row">
+                <div class="col-xs-12 text-center form-group">
+                  <a class="btn btn-sm btn-default btn-ticket-add" href="javasctipt:;" onclick="return onTicketAdd(this);"><i class="fa fa-plus"></i> Add new Ticket</a>
+                </div>
+              </div>
           </div>
           <div class="form-footer">
             <button class="btn btn-daydash btn-daydash-green-1">Submit for review</button>
@@ -208,113 +261,5 @@
           </div>
 
     <!-- Template -->
-    <%= render partial: "organizer/parts/section" %>
-
-<% if @event.id.present? %>
-<script type="text/javascript">
-
-  function sortImage() {
-    $('.sortable').sortable({
-      cursor: 'move',
-      stop: function(event, ui){
-        var attachment = $('.attachments > .ui-sortable-handle');
-
-        attachment.each(function(i, el) {
-          var mediaId = $(el).attr('data-id');
-          var sortIndex = $(el).index();
-          // console.log(mediaId);
-          // console.log(sortIndex);
-          updateImage(mediaId, sortIndex);
-        });
-      }
-    });
-  }
-
-  function orderImage() {
-    $.ajax({
-      url: '<%= order_attachment_organizer_event_path(@event, format: :json) %>',
-      type: 'GET',
-      success: function(result) {
-        var attachment = $('.attachments');
-
-        attachment.empty()
-
-        // console.log(result);
-        $.each(result, function(i){
-          var data = result[i]
-
-          var div = $('<div class="col-xs-12"></div>');
-          var remove = $('<div class="remove"><i class="glyphicon glyphicon-remove-circle"></i></div>');
-          var image = $('<div class="image"></div>');
-
-          div.attr('data-id', data.id);
-          div.attr('data-index', data.sort_index);
-
-          remove.css('position', 'absolute')
-                .css('top', '-15px')
-                .css('left', '60%')
-                .css('z-index', '1000')
-                .css('cursor', 'pointer');
-
-          remove.attr('onclick', 'return removeImage("'+ data.id +'")')
-
-          image.css('background-image', 'url(' + data.media + ')')
-               .css('width', '60%')
-
-          div.append(remove).append(image);
-
-          attachment.append(div);
-        });
-
-        sortImage()
-      }
-    });
-  }
-
-  $(function(){
-    orderImage();
-  });
-
-  function updateImage(media_id, sort_index) {
-    $.ajax({
-      url: '<%= update_attachment_organizer_event_path(@event) %>',
-      data: {
-        'media_id': media_id,
-        'sort_index': sort_index
-      },
-      type: 'PUT',
-      success: function(result) {
-        // console.log("ok");
-      }
-    });
-  }
-
-  function removeImage(media_id) {
-    swal({
-      title: 'Are you sure?',
-      // text: "You won't be able to revert this!",
-      type: 'warning',
-      showCancelButton: true,
-      confirmButtonColor: '#3085d6',
-      cancelButtonColor: '#d33',
-      confirmButtonText: 'Yes, delete it!'
-    }).then(function(){
-      $.ajax({
-        url: '<%= delete_attachment_organizer_event_path(@event) %>',
-        data: {
-          'media_id': media_id
-        },
-        type: 'DELETE',
-        success: function(result) {
-          orderImage();
-          swal(
-            'Deleted!',
-            'Your file has been deleted.',
-            'success'
-          )
-        }
-      });
-    })
-  }
-</script>
-<% end %>
+    <%= render partial: 'organizer/parts/section' %>
+    <%= render partial: 'organizer/parts/image' if @event.id.present? %>
