--- a/app/views/organizer/parts/_section.html.erb
+++ b/app/views/organizer/parts/_section.html.erb
@@ -1,10 +1,15 @@
-<script> //Init Function
+<script>
   function initDatetimepicker(element) {
     $('.datepicker', element).datetimepicker({
-      format: 'DD/MM/YYYY HH:mm'
+      format: 'DD/MM/YYYY'
     });
 
-    $('.event-time', element).on("dp.change", function (e) {
+    $('.timepicker', element).datetimepicker({
+      format: 'HH:mm',
+      stepping: 30
+    })
+
+    $('.start-time', element).on("dp.change", function (e) {
       element.find('.end-time').data("DateTimePicker").minDate(e.date);
     });
 
@@ -16,7 +21,7 @@
     Mustache.parse(template);
     var rendered = Mustache.render(template, {});
     var element = $(rendered);
-    $('.ticket-list tbody').append(element);
+    $('.new-ticket').append(element);
 
     initDatetimepicker(element);
 
@@ -36,38 +41,110 @@
   });
 </script>
 
+
 <!-- Template -->
 <script id="new-ticket-template" type="x-tmpl-mustache">
-  <tr class="ticket new-ticket">
-    <td><input class="form-control" required="" type="text" name="new_ticket_names[]" value="" placeholder="eg. General, VIP" /></td>
-    <td><input class="form-control" required="" type="number" name="new_ticket_totals[]" value="" /></td>
-    <td><input class="form-control" type="number" name="new_ticket_initials[]" value="" /></td>
-    <td><input class="form-control" required="" type="number" name="new_ticket_prices[]" value="" /></td>
+  <div class="row">
+    <div class="col-xs-4 form-group">
+      <label for="tickets-name">Ticket name</label>
+      <input type="text"
+             name="new_ticket_names[]"
+             id="tickets-name"
+             value=""
+             placeholder="eg. General, VIP"
+             class="form-control"
+             required="true" />
+    </div>
+    <div class="col-xs-2 form-group">
+      <label for="tickets-quantity">Quantity available</label>
+      <input type="number"
+             name="new_ticket_totals[]"
+             id="tickets-quantity"
+             value=""
+             placeholder="eg. 10, 50, 100"
+             class="form-control"
+             required="true" />
+    </div>
+    <div class="col-xs-2 form-group">
+      <label for="tickets-price">Price</label>
+      <input type="number"
+             name="new_ticket_prices[]"
+             id="tickets-price"
+             value=""
+             placeholder="eg. 1000, 2000"
+             class="form-control"
+             required="true" />
+    </div>
+    <div class="col-xs-2 form-group">
+      <label for="tickets-discount">Discount</label>
+      <input type="number"
+             name="new_ticket_initials[]"
+             id="tickets-discount"
+             value=""
+             placeholder="eg. 100, 200"
+             class="form-control" />
+    </div>
 
-    <td width="200">
-      <div class="form-group">
-        <div class='input-group date datepicker event-time'>
-          <input type="text" class="form-control" name="new_ticket_event_time[]" />
-          <span class="input-group-addon">
-            <span class="glyphicon glyphicon-calendar"></span>
-          </span>
+    <div class="col-xs-2 form-group">
+      <label for="tickets-sales-end">Actions</label>
+      <p>
+        <a class="btn btn-sm btn-default btn-ticket-add" href="javasctipt:;" onclick="return onTicketAdd(this);"><i class="fa fa-cog"></i></a>
+        <a class="btn btn-sm btn-default btn-ticket-delete" href="javasctipt:;" onclick="return onTicketDelete(this);"><i class="fa fa-trash"></i></a>
+      </p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-6">
+      <label for="tickets-sales-start">Ticket sales start</label>
+      <div class="row">
+        <div class="col-xs-8 form-group">
+          <div class='input-group date'>
+            <input type="text"
+                  name="new_ticket_start_date[]"
+                  class="form-control datepicker" />
+            <span class="input-group-addon">
+              <span class="fa fa-calendar"></span>
+            </span>
+          </div>
+        </div>
+        <div class="col-xs-4 form-group">
+          <div  class="input-group date">
+            <input type="text"
+                  name="new_ticket_start_time[]"
+                  class="form-control timepicker" />
+            <span class="input-group-addon">
+              <span class="fa fa-clock-o"></span>
+            </span>
+          </div>
         </div>
       </div>
-    </td>
-    <td width="200">
-      <div class="form-group">
-        <div class='input-group date datepicker end-time'>
-          <input type="text" class="form-control" name="new_ticket_end_time[]" />
-          <span class="input-group-addon">
-            <span class="glyphicon glyphicon-calendar"></span>
-          </span>
+    </div>
+    <div class="col-xs-6">
+      <label for="tickets-sales-start">Ticket sales end</label>
+      <div class="row">
+        <div class="col-xs-8 form-group">
+          <div class='input-group date'>
+            <input type="text"
+                  name="new_ticket_end_date[]"
+                  class="form-control datepicker" />
+            <span class="input-group-addon">
+              <span class="fa fa-calendar"></span>
+            </span>
+          </div>
+        </div>
+        <div class="col-xs-4 form-group">
+          <div  class="input-group date">
+            <input type="text"
+                  name="new_ticket_end_time[]"
+                  class="form-control timepicker" />
+            <span class="input-group-addon">
+              <span class="fa fa-clock-o"></span>
+            </span>
+          </div>
         </div>
       </div>
-    </td>
-
-    <td width="100" align="right">
-      <a class="btn btn-sm btn-default btn-ticket-delete" href="javasctipt:;" onclick="return onTicketDelete(this);"><i class="fa fa-minus"></i></a>
-      <a class="btn btn-sm btn-default btn-ticket-add" href="javasctipt:;" onclick="return onTicketAdd(this);"><i class="fa fa-plus"></i></a>
-    </td>
-  </tr>
+    </div>
+  </div>
+  <hr>
 </script>
