--- a/app/views/organizer/parts/_section.html.erb
+++ b/app/views/organizer/parts/_section.html.erb
@@ -78,7 +78,7 @@
     <div class="col-xs-2 form-group">
       <label for="tickets-discount">Discount</label>
       <input type="number"
-             name="new_ticket_initials[]"
+             name="new_ticket_discounts[]"
              id="tickets-discount"
              value=""
              placeholder="eg. 100, 200"
@@ -102,7 +102,8 @@
           <div class='input-group date'>
             <input type="text"
                   name="new_ticket_start_date[]"
-                  class="form-control datepicker" />
+                  class="form-control datepicker"
+                  placeholder="DD/MM/YY" />
             <span class="input-group-addon">
               <span class="fa fa-calendar"></span>
             </span>
@@ -112,7 +113,8 @@
           <div  class="input-group date">
             <input type="text"
                   name="new_ticket_start_time[]"
-                  class="form-control timepicker" />
+                  class="form-control timepicker"
+                  placeholder="HH:mm" />
             <span class="input-group-addon">
               <span class="fa fa-clock-o"></span>
             </span>
@@ -127,7 +129,8 @@
           <div class='input-group date'>
             <input type="text"
                   name="new_ticket_end_date[]"
-                  class="form-control datepicker" />
+                  class="form-control datepicker"
+                  placeholder="DD/MM/YY" />
             <span class="input-group-addon">
               <span class="fa fa-calendar"></span>
             </span>
@@ -137,7 +140,8 @@
           <div  class="input-group date">
             <input type="text"
                   name="new_ticket_end_time[]"
-                  class="form-control timepicker" />
+                  class="form-control timepicker"
+                  placeholder="HH:mm" />
             <span class="input-group-addon">
               <span class="fa fa-clock-o"></span>
             </span>
