--- a/app/views/organizer/parts/_event_form.html.erb
+++ b/app/views/organizer/parts/_event_form.html.erb
@@ -181,7 +181,7 @@
                   <input type="number"
                          name="tickets[<%= section.id %>][discount]"
                          id="tickets-discount"
-                         value="<%= section.initial_price %>"
+                         value="<%= section.discount %>"
                          placeholder="eg. 100, 200"
                          class="form-control" />
                 </div>
