--- a/app/views/organizer/parts/_section.html.erb
+++ b/app/views/organizer/parts/_section.html.erb
@@ -28,10 +28,46 @@
     return false;
   }
 
-  function onTicketDelete(button) {
-    var element = $(button).parents('.ticket');
-    console.log(element);
-    element.remove();
+  function onTicketDelete(button, section_id = null) {
+    var element = $(button).parents('.section-ticket');
+
+    if(section_id != null)
+      swal({
+        title: 'Are you sure?',
+        // text: "You won't be able to revert this!",
+        type: 'warning',
+        showCancelButton: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        confirmButtonText: 'Yes, delete it!'
+      }).then(function(){
+        $.ajax({
+          url: '<%= delete_section_organizer_event_path(@event) %>',
+          data: {
+            'section_id': section_id
+          },
+          type: 'DELETE',
+          success: function(result) {
+            if(result == 'success') {
+              swal(
+                'Deleted!',
+                'Your file has been deleted.',
+                'success'
+              )
+              element.remove();
+            }
+            else {
+              swal(
+                'Failure!',
+                'ไม่สามารถลบ Ticket นี้ได้เนื่องจากได้ดำเนินการขายอยู่',
+                'error'
+              )
+            }
+          }
+        });
+      })
+    else
+      element.remove();
 
     return false;
   }
@@ -43,7 +79,7 @@
 
 <!-- Template -->
 <script id="new-ticket-template" type="x-tmpl-mustache">
-  <div class="row">
+  <div class="row section-ticket">
     <div class="col-xs-4 form-group">
       <label for="tickets-name">Ticket name</label>
       <input type="text"
@@ -83,17 +119,12 @@
              placeholder="eg. 100, 200"
              class="form-control" />
     </div>
-
     <div class="col-xs-2 form-group">
       <label for="tickets-sales-end">Actions</label>
       <p>
-        <a class="btn btn-sm btn-default btn-ticket-add" href="javasctipt:;" onclick="return onTicketAdd(this);"><i class="fa fa-cog"></i></a>
         <a class="btn btn-sm btn-default btn-ticket-delete" href="javasctipt:;" onclick="return onTicketDelete(this);"><i class="fa fa-trash"></i></a>
       </p>
     </div>
-  </div>
-
-  <div class="row">
     <div class="col-xs-6">
       <label for="tickets-sales-start">Ticket sales start</label>
       <div class="row">
@@ -148,6 +179,6 @@
         </div>
       </div>
     </div>
+    <div class="col-xs-12"><hr></div>
   </div>
-  <hr>
 </script>
