--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -130,19 +130,13 @@
             <%= @section_count > 1 ? "เริ่มต้นที่" : 'ราคา' %>
           </div>
 
-          <% if @section.initial_price.present?  %>
-            <div style="position: absolute; top: 50px; font-size: 34px;">
-              <%= convert_to_currency(@section.price) %>
-            </div>
-          <% else %>
-            <div style="position: absolute; top: 50px; font-size: 34px;">
-              <%= convert_to_currency(@section.price) %>
-            </div>
-          <% end %>
+          <div style="position: absolute; top: 50px; font-size: 34px;">
+            <%= convert_to_currency(@section.price - @section.discount) %>
+          </div>
 
-          <% if @section.initial_price.present? %>
+          <% if @section.discount.present? %>
             <div style="position: absolute; top: 50px; right: 20px;">
-              จากราคาปกติ: <%= convert_to_currency(@section.initial_price) %>
+              จากราคาปกติ: <%= convert_to_currency(@section.price) %>
             </div>
             <div style="position: absolute; top: 70px; right: 20px; color: #D85B56;">
               ลดไป <%= convert_to_currency(@section.discount) %> (<%= @section.percent %>% off)
