--- a/app/views/organizer/parts/_event_form.html.erb
+++ b/app/views/organizer/parts/_event_form.html.erb
@@ -74,6 +74,15 @@
                   </div>
                 </div>
                 <div class="form-group">
+                  <label>Event time</label>
+                  <div class='input-group date'>
+                    <input type='text' name="uptime" value="<%= @event.uptime.try(:strftime, '%d/%m/%y %H:%M') %>" class="form-control event-time" />
+                    <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                  </div>
+                </div>
+                <div class="form-group">
                   <label>Shot Description</label>
                   <textarea style="height: 100px" class="form-control" name="short_description" rows="10"><%= @event.short_description %></textarea>
                 </div>
