--- a/app/views/organizer/parts/_section.html.erb
+++ b/app/views/organizer/parts/_section.html.erb
@@ -1,4 +1,18 @@
 <script>
+
+  $(function () {
+      $('.event-time').datetimepicker({
+        format: 'DD/MM/YYYY HH:mm',
+        stepping: 30
+          // defaultDate: "11/1/2013",
+          // disabledDates: [
+          //     moment("12/25/2013"),
+          //     new Date(2013, 11 - 1, 21),
+          //     "11/22/2013 00:53"
+          // ]
+      });
+  });
+
   function initDatetimepicker(element) {
     $('.datepicker', element).datetimepicker({
       format: 'DD/MM/YYYY'
