--- a/app/views/client/payments/express.html.erb
+++ b/app/views/client/payments/express.html.erb
@@ -30,10 +30,10 @@
                     <% next if @tickets["#{section.id}"].nil? %>
                     <div class="ticket row">
                       <div class="col-xs-8 ticket-title">
-                        <%= section.title %> <%= @tickets["#{section.id}"]["quantity"] %> x <%= convert_to_currency section.price %>
+                        <%= section.title %> <%= @tickets["#{section.id}"]["quantity"] %> x <%= convert_to_currency section.sale_price %>
                       </div>
                       <div class="col-xs-4 ticket-price">
-                      <%= convert_to_currency(section.price * @tickets["#{section.id}"]["quantity"]) %>
+                      <%= convert_to_currency(section.sale_price * @tickets["#{section.id}"]["quantity"]) %>
                       </div>
                     </div>
                   <% end unless @is_free %>
