--- a/app/views/admin/temporary/index.html.erb
+++ b/app/views/admin/temporary/index.html.erb
@@ -10,6 +10,34 @@
               <h1 class="list-title">User list all (<%= @users.count %> users)</h1>
             </div>
             <div class="list-body table-responsive">
+              <h2>All Organizer</h2>
+              <table class="table table-hover">
+                <thead>
+                  <tr>
+                    <td>Name</td>
+                    <td>Phone</td>
+                    <td>Email</td>
+                    <td>Facebook</td>
+                    <td>Gender</td>
+                    <td>created_at</td>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% @organizer.each do |user| %>
+                  <tr>
+                    <td>
+                      <%= link_to "#{user.first_name} #{user.last_name}", client_profile_settings_path(user.id) %>
+                    </td>
+                    <td><%= user.phone %></td>
+                    <td><%= user.email %></td>
+                    <td><%= user.uid %></td>
+                    <td><%= user.gender %></td>
+                    <td><%= user.created_at %></td>
+                  </tr>
+                  <% end %>
+                </tbody>
+              </table>
+              <h2>All User</h2>
               <table class="table table-hover">
                 <thead>
                   <tr>
@@ -24,7 +52,9 @@
                 <tbody>
                   <% @users.each do |user| %>
                   <tr>
-                    <td><%= "#{user.first_name} #{user.last_name}" %></td>
+                    <td>
+                      <%= link_to "#{user.first_name} #{user.last_name}", client_profile_settings_path(user.id) %>
+                    </td>
                     <td><%= user.phone %></td>
                     <td><%= user.email %></td>
                     <td><%= user.uid %></td>
