--- a/app/views/client/profiles/orders.html.erb
+++ b/app/views/client/profiles/orders.html.erb
@@ -1,7 +1,7 @@
 <script>$('body').attr('id', 'profile-order-list-page');</script>
 <script>$('body').addClass('profile-page');</script>
 
-<%= render partial: "layouts/parts/nav" %>
+<%#= render partial: "layouts/parts/nav" %>
 <script>$('#profile-nav #menu-my-orders').addClass('active');</script>
 
 <div class="section">
