--- a/app/views/organizer/events/edit.html.erb
+++ b/app/views/organizer/events/edit.html.erb
@@ -4,7 +4,7 @@
   $('.organizer-event-nav .organizer-event-nav-edit').addClass('active');
 </script>
 
-<%= render partial: "layouts/parts/nav" %>
+<%#= render partial: "layouts/parts/nav" %>
 
 <div class="section">
   <div class="container">
