--- a/app/views/organizer/events/new.html.erb
+++ b/app/views/organizer/events/new.html.erb
@@ -5,7 +5,7 @@
   });
 </script>
 
-<%= render partial: "layouts/parts/nav" %>
+<%#= render partial: "layouts/parts/nav" %>
 
 <div class="section">
   <div class="container">
