--- a/app/views/admin/temporary/transactions.html.erb
+++ b/app/views/admin/temporary/transactions.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: "layouts/parts/nav" %>
+<%#= render partial: "layouts/parts/nav" %>
 <script>$('#organizer-nav #menu-transaction-list').addClass('active');</script>
 
 <div class="section">
