save organizer management

--- a/app/views/organizer/events/attendees.html.erb
+++ b/app/views/organizer/events/attendees.html.erb
@@ -3,7 +3,7 @@
 <%= render partial: "layouts/parts/manage_nav" %>
 <script>
   $('#organizer-nav #menu-event-list').addClass('active');
-  $('.organizer-event-nav .organizer-event-nav-check-in').addClass('active');
+  $('.organizer-event-nav .organizer-event-nav-attendees').addClass('active');
 </script>
 
 <div class="section" id="checkin-section">
@@ -13,33 +13,28 @@
         <% @sections.each do |section| %>
         <div class="event-section-panel">
           <div class="panel-header">
-            <div class="row">
-              <div class="col-xs-12 col-md-6">
-                <ul class="meta-info list-inline">
-                  <li>Attendees: <%= section.tickets.available.count %></li>
-                  <li>Checked-in: <%= section.tickets.used.count %></li>
-                  <li>Remaining: <%= section.tickets.paid.count - section.tickets.used.count %></li>
-                </ul>
-              </div>
-              <div class="col-xs-12 col-md-6">
-                <div class="input-group">
-                  <span class="input-group-addon"><i class="fa fa-search"></i></span>
-                  <input type="text" class="form-control table-filter" name="table_filter" placeholder="Name, Email, Ticket ID">
-                </div>
-              </div>
-            </div>
-          </div>
+						<div class="row panel-header">
+							<div class="col-xs-9 text-left">
+								Attendees: <%= section.tickets.available.count %>
+							</div>
+							<div class="col-xs-3 text-right">
+								<%= link_to 'EXPORT', orders_organizer_event_path(format: :xlsx) %>
+							</div>
+						</div>
+					</div>
           <div class="table-responsive organizer-table">
             <table class="table table-hover">
               <thead>
                 <tr>
                   <td class="mobile-only"></td>
                   <td>ATTENDEE NAME</td>
+									<td>GENDER</td>
+									<td>AGE</td>
                   <td>EMAIL</td>
                   <td>TEL</td>
-                  <td>TICKET TYPE</td>
+                  <td>ORDER ID</td>
+                  <td>ORDER DATE</td>
                   <td>TICKET ID</td>
-                  <td>STATUS</td>
                 </tr>
               </thead>
               <tbody>
@@ -52,15 +47,13 @@
                       <td class="mobile-only"><%= link_to "CHECK IN", organizer_event_ticket_checking_path(@event.id, ticket.id), method: :post %></td>
                     <% end %>
                     <td><%= ticket.user.first_name %> <%= ticket.user.last_name %></td>
+                    <td><%= ticket.user.gender %></td>
+                    <td><%= ticket.user.age %></td>
                     <td><%= ticket.user.email %></td>
                     <td><%= ticket.user.phone %></td>
-                    <td><%= ticket.section.title %></td>
+                    <td><%= ticket.order.code %></td>
+                    <td><%= ticket.order.created_at.strftime("%d %B %Y, %H:%M") %></td>
                     <td><%= ticket.code %></td>
-                    <% if ticket.status.used? %>
-                      <td>Checked</td>
-                    <% else %>
-                      <td><%= link_to "CHECK IN", organizer_event_ticket_checking_path(@event.id, ticket.id), method: :post %></td>
-                    <% end %>
                   </tr>
                 <% end %>
               </tbody>
