--- a/app/views/organizer/events/orders.html.erb
+++ b/app/views/organizer/events/orders.html.erb
@@ -12,18 +12,13 @@
       <div class="col-xs-12">
         <div class="event-section-panel">
           <div class="row panel-header">
-            <div class="col-xs-12">
-              <h3>ALL ORDERS</h3>
-            </div>
             <div class="col-xs-9 text-left">
-              <ul class="list-inline">
-                <li>Orders: <%= @event.orders.paid.count %></li>
-                <li>Total Sales: <%= convert_to_currency @event.get_total_sales %></li>
-                <li>Attendees: <%= @event.tickets.available.count %></li>
-              </ul>
+              <p>
+                <%= convert_to_currency @event.get_total_sales %> Total Sales from <%= @event.orders.paid.count %> orders
+              </p>
             </div>
             <div class="col-xs-3 text-right">
-              <%= link_to 'Download as .xlsx', orders_organizer_event_path(format: :xlsx) %>
+              <%= link_to 'EXPORT', orders_organizer_event_path(format: :xlsx) %>
             </div>
           </div>
           <div class="table-responsive organizer-table">
@@ -31,26 +26,29 @@
               <thead>
                 <tr>
                   <td>ORDER #</td>
+                  <td>ORDER DATE</td>
                   <td>TICKET BUYER</td>
                   <td>QUANTITY</td>
                   <td>PRICE</td>
-                  <td>PURCHASED DATE</td>
                   <td>PAYMENT</td>
+                  <td>STATUS</td>
                 </tr>
               </thead>
               <tbody>
                 <% @orders.each do |order| %>
                 <tr>
                   <td><%= order.code %></td>
+                  <td><%= order.created_at.strftime("%d %B %Y, %H:%M") %></td>
                   <td><%= order.user.first_name %> <%= order.user.last_name %></td>
                   <td><%= order.tickets.count %></td>
                   <td><%= convert_to_currency(order.to_price) %></td>
-                  <td><%= order.created_at.strftime("%d %B %Y, %H:%M") %></td>
+                  <td>
+                    <% if !order.payment.nil? %>
+                      <%= order.payment.channel %>
+                    <% end %>
+                  </td>
                   <td>
                     <span class="order-status <%= order.status %>"><%= order.status %></span>
-                    <% if !order.payment.nil? %>
-                      - <%= order.payment.channel %>
-                    <% end %>
                   </td>
                 </tr>
                 <% end %>
