--- a/app/views/organizer/events/orders.html.erb
+++ b/app/views/organizer/events/orders.html.erb
@@ -14,7 +14,7 @@
           <div class="row panel-header">
             <div class="col-xs-9 text-left">
               <p>
-                <%= convert_to_currency @event.get_total_sales %> Total Sales from <%= @event.orders.paid.count %> orders
+                <%= convert_to_currency @event.get_total_sales %> total sales from <%= @event.orders.paid.count %> orders
               </p>
             </div>
             <div class="col-xs-3 text-right">
