--- a/app/assets/stylesheets/customs/organizer.sass
+++ b/app/assets/stylesheets/customs/organizer.sass
@@ -152,6 +152,39 @@ $green-color: #19D4D6
             border-right: 0px
 
 
+
+
+#organizer-header-section
+  padding-top: 15px
+  border-bottom: 1px solid $gray-color-e
+  background: #f8f8f8
+
+  // #profile-nav, #organizer-nav
+  //   text-align: center
+  //   margin: 0px auto
+  //   width: 500px
+  //   margin-top: 15px
+  //   display: flex
+
+  //   li
+  //     margin-left: 0
+
+  // .current-user-panel
+  //   text-align: center
+  //   .profile-photo
+  //     width: 80px
+  //     height: 80px
+  //     border-radius: 50%
+  //     background-size: cover
+  //     background-position: center
+  //     background-repeat: no-repeat
+  //     margin: 10px auto
+  //   .user-name
+  //     font-size: 20px
+  //     font-weight: 200
+  //     margin-bottom: 5px
+
+
 #organizer-event-orders
   #main
     background: #fcfcfc
