--- a/app/views/organizer/events/attendees.html.erb
+++ b/app/views/organizer/events/attendees.html.erb
@@ -1,12 +1,7 @@
-<script>$('body').attr('id', 'organizer-event-checkin').addClass('organizer-event-page');</script>
-
+<% content_for :body_id, 'organizer-event-attendees' %>
+<% content_for :body_class, 'organizer-event-page' %>
 <%= render partial: "layouts/parts/manage_nav" %>
-<script>
-  $('#organizer-nav #menu-event-list').addClass('active');
-  $('.organizer-event-nav .organizer-event-nav-attendees').addClass('active');
-</script>
-
-<div class="section" id="checkin-section">
+<div class="section" id="checkin-attendees">
   <div class="container">
     <div class="section-body row">
       <div class="col-xs-12">
