--- a/app/views/organizer/events/orders.html.erb
+++ b/app/views/organizer/events/orders.html.erb
@@ -1,11 +1,6 @@
-<script>$('body').attr('id', 'organizer-event-orders').addClass('organizer-event-page');</script>
-
+<% content_for :body_id, 'organizer-event-orders' %>
+<% content_for :body_class, 'organizer-event-page' %>
 <%= render partial: "layouts/parts/manage_nav" %>
-<script>
-  $('#organizer-nav #menu-event-list').addClass('active');
-  $('.organizer-event-nav .organizer-event-nav-orders').addClass('active');
-</script>
-
 <div class="section" id="order-list-section">
   <div class="container">
     <div class="section-body row">
