--- a/app/views/layouts/parts/_manage_nav.html.erb
+++ b/app/views/layouts/parts/_manage_nav.html.erb
@@ -1,12 +1,11 @@
-<div class="section" id="profile-nav-section">
+<div class="section" id="organizer-header-section">
   <div class="container">
-
     <div class="section-header row">
-      <div class="col-xs-10">
+      <div class="col-md-9 col-lg-10">
         <h2 class="event-title"><%= @event.title %> [<%= @event.status == 'published' ? 'Live' : 'Draft' %>]</h2>
         <p><%= @event.to_uptime %> at <%= @event.location_name %></p>
       </div>
-      <div class="col-xs-2 text-right">
+      <div class="col-md-3 col-lg-2 text-right">
         <a href="<%= edit_organizer_event_path(@event) %>" class="btn btn-default">Edit</a>
         <a href="<%= client_event_path(@event) %>" class="btn btn-default">View Event</a>
       </div>
