fix sass and export excel attendees

--- a/app/assets/stylesheets/components/button.sass
+++ b/app/assets/stylesheets/components/button.sass
@@ -1,16 +1,7 @@
 
-$gray-color-3: #333
-$gray-color-4: #444
-$gray-color-8: #888
-$gray-color-a: #aaa
-$gray-color-c: #ccc
-$gray-color-e: #eee
-
-$green-color: #19D4D6
-
 .btn-daydash
   border-radius: 0px
-  color: $gray-color-4
+  color: #444
   &:hover, &:active, &:visited, &:link
     color: black
 
@@ -27,12 +18,12 @@ $green-color: #19D4D6
 
 .btn-daydash-inverse
   &, &:active, &:visited, &:link
-    background: $gray-color-4
+    background: #444
     color: white
     border: 0px
 
   &:hover
-    background: $gray-color-8
+    background: #888
     color: white
 
 .btn-daydash-green-1
@@ -43,7 +34,7 @@ $green-color: #19D4D6
 
 .btn-daydash-green-2
   &, &:hover, &:active, &:visited, &:link
-    background: $green-color
+    background: #19D4D6
     color: white
     border: 0px
 
