--- a/app/assets/stylesheets/customs/organizer.sass
+++ b/app/assets/stylesheets/customs/organizer.sass
@@ -1,13 +1,4 @@
 
-$gray-color-3: #333
-$gray-color-4: #444
-$gray-color-8: #888
-$gray-color-a: #aaa
-$gray-color-c: #ccc
-$gray-color-e: #eee
-
-$green-color: #19D4D6
-
 #organizer-event-list
   #event-list-section
     .container
@@ -51,7 +42,7 @@ $green-color: #19D4D6
       background-size: cover
       background-position: center
       background-repeat: no-repeat
-      background-color: $gray-color-c
+      background-color: #ccc
 
   .form-title
     margin-top: 0px
@@ -93,7 +84,7 @@ $green-color: #19D4D6
     thead
       tr
         td, th
-          background: $gray-color-4
+          background: #444
           color: white
           font-weight: 200
 
@@ -113,12 +104,12 @@ $green-color: #19D4D6
     a
       &, &:active, &:link, &:visited
         padding: 8px 10px
-        color: $gray-color-4
+        color: #444
         background: transparent
         border-bottom: 1px solid #ddd
 
       &:hover
-        background: $gray-color-e
+        background: #eee
 
       .icon
         float: left
@@ -156,7 +147,7 @@ $green-color: #19D4D6
 
 #organizer-header-section
   padding-top: 15px
-  border-bottom: 1px solid $gray-color-e
+  border-bottom: 1px solid #eee
   background: #f8f8f8
 
   // #profile-nav, #organizer-nav
