--- a/app/views/client/events/index.html.erb
+++ b/app/views/client/events/index.html.erb
@@ -17,7 +17,7 @@
 </div>
 <div class="section" id="event-section">
   <div class="container">
-    <ul class="nav nav-pills nav-daydash nav-daydash-green">
+    <ul class="nav nav-pills nav-daydash nav-daydash-lg nav-daydash-green">
       <li class="active">
         <%= link_to 'ALL', 'javascript:;', class: 'category-filter', 'data-filter': 0 %>
         <!-- <a href="#" onclick="return"></a> -->
