--- a/app/assets/stylesheets/customs/profile.sass
+++ b/app/assets/stylesheets/customs/profile.sass
@@ -1,16 +1,7 @@
 
-$gray-color-3: #333
-$gray-color-4: #444
-$gray-color-8: #888
-$gray-color-a: #aaa
-$gray-color-c: #ccc
-$gray-color-e: #eee
-
-$green-color: #19D4D6
-
 #profile-nav-section
   padding-top: 15px
-  border-bottom: 1px solid $gray-color-e
+  border-bottom: 1px solid #eee
   background: #f8f8f8
 
   #profile-nav, #organizer-nav
@@ -49,7 +40,7 @@ $green-color: #19D4D6
           .past-event-section
             margin-top: 50px
             margin-bottom: 30px
-            border-top: 3px dotted $gray-color-c
+            border-top: 3px dotted #ccc
             .past-event-header
               margin-top: -13px
               text-align: center
@@ -58,7 +49,7 @@ $green-color: #19D4D6
                 display: inline-block
                 padding: 0px 15px
                 font-size: 12px
-                color: $gray-color-a
+                color: #aaa
                 background: #fcfcfc
                 letter-spacing: 1px
         .empty
