--- a/app/assets/stylesheets/customs/components.scss
+++ b/app/assets/stylesheets/customs/components.scss
@@ -51,6 +51,35 @@ label{
 	}
 }
 
+.text-inline {
+  float: left;
+  display: inline-block;
+}
+
+.ml-10 {
+  margin-left: 10px;
+}
+
+.ml-15 {
+  margin-left: 15px;
+}
+
+.ml-20 {
+  margin-left: 20px;
+}
+
+.mr-10 {
+  margin-right: 10px;
+}
+
+.mr-15 {
+  margin-right: 15px;
+}
+
+.mr-20 {
+  margin-right: 20px;
+}
+
 .nav-daydash {
   li {
     a {
