--- a/app/views/organizer/events/checkin.html.erb
+++ b/app/views/organizer/events/checkin.html.erb
@@ -7,20 +7,18 @@
       <div class="col-xs-12">
         <% @sections.each do |section| %>
         <div class="event-section-panel">
-          <div class="panel-header">
-            <div class="row">
-              <div class="col-xs-12 col-md-6">
-                <ul class="meta-info list-inline">
-                  <li>Attendees: <%= section.tickets.available.count %></li>
-                  <li>Checked-in: <%= section.tickets.used.count %></li>
-                  <li>Remaining: <%= section.tickets.paid.count - section.tickets.used.count %></li>
-                </ul>
+          <div class="row panel-header">
+            <div class="col-xs-12 col-md-6">
+              <div class="row">
+                <div class="text-inline ml-20">Attendees: <%= section.tickets.available.count %></div>
+                <div class="text-inline ml-20">Checked-in: <%= section.tickets.used.count %></div>
+                <div class="text-inline ml-20">Remaining: <%= section.tickets.paid.count - section.tickets.used.count %></div>
               </div>
-              <div class="col-xs-12 col-md-6">
-                <div class="input-group">
-                  <span class="input-group-addon"><i class="fa fa-search"></i></span>
-                  <input type="text" class="form-control table-filter" name="table_filter" placeholder="Name, Email, Ticket ID">
-                </div>
+            </div>
+            <div class="col-xs-12 col-md-6">
+              <div class="input-group">
+                <span class="input-group-addon"><i class="fa fa-search"></i></span>
+                <input type="text" class="form-control table-filter" name="table_filter" placeholder="Name, Email, Ticket ID">
               </div>
             </div>
           </div>
