--- a/app/views/organizer/events/orders.html.erb
+++ b/app/views/organizer/events/orders.html.erb
@@ -7,13 +7,18 @@
       <div class="col-xs-12">
         <div class="event-section-panel">
           <div class="row panel-header">
-            <div class="col-xs-9 text-left">
-              <p>
-                <%= convert_to_currency @event.get_total_sales %> total sales from <%= @event.orders.paid.count %> orders
-              </p>
+            <div class="col-xs-6 text-left">
+              <%= convert_to_currency @event.get_total_sales %> total sales from <%= @event.orders.paid.count %> orders
             </div>
-            <div class="col-xs-3 text-right">
+            <div class="col-xs-3 col-md-3 text-right">
               <%= link_to 'EXPORT', orders_organizer_event_path(format: :xlsx) %>
+            </div>
+            <div class="col-xs-3 col-md-3 text-right">
+              <select class="form-control">
+                <option selected disabled>เรียงตาม: Recent</option>
+                <option>1</option>
+                <option>2</option>
+              </select>
             </div>
           </div>
           <div class="table-responsive organizer-table">
